Aggiunto animazioni fra LoginActivity e RegisterActivity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,7 @@
     <string name="stringa_registrati">Registrati</string>
     <string name="stringa_conferma">Conferma</string>
     <string name="stringa_sesso">Sesso</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
