--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,11 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="testo_prova">adsadasdsaaaaaaaaaaasssssssssssssssssssssssssssssssssssssssssssssssssssss
+    sssssssssssssssssssssssssssssssssssssssssssss
+    ssssssssssssssssssssssssssssssssssss
+    sssssssssssssssssssssssssssssssssssss
+    sssssssssssssssssssssssssssssssssssssssss
+    ssssssssssssssssssssssssssssssssssssssssssss
+    ssssssssssssssssssssssssssssssssssssss</string>
 </resources>
