--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,11 +20,5 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="testo_prova">mihaeladsadasdsaaaaaaaaaaasssssssssssssssssssssssssssssssssssssssssssssssssssss
-    sssssssssssssssssssssssssssssssssssssssssssss
-    ssssssssssssssssssssssssssssssssssss
-    sssssssssssssssssssssssssssssssssssss
-    sssssssssssssssssssssssssssssssssssssssss
-    ssssssssssssssssssssssssssssssssssssssssssss
-    ssssssssssssssssssssssssssssssssssssss</string>
+    <string name="testo_prova">mihaeladsadasdsaaaaaaaaaaasssssssssssssssssssssssssssssssssssssssssssssssssssss</string>
 </resources>
